src/objects/Dependent_Document__c.object
<CustomObject>
    <description>Click Loans</description>
    <fields>
        <fullName>ACF_Community__c</fullName>
        <formula>acfDocument_Master__r.Click_Community_Setup__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ACF Community</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acfActive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Click Loans</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>acfAnswer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Click Loans</description>
        <label>Answer</label>
        <referenceTo>Answer__c</referenceTo>
        <relationshipName>Dependent_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>acfDocument_Master__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Click Loans</description>
        <label>Document Master</label>
        <referenceTo>Document_Master__c</referenceTo>
        <relationshipName>Dependent_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Click Loans Dependent Document</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>acfActive__c</columns>
        <columns>acfAnswer__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>ACF_Community__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Lendi</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>acfActive__c</columns>
        <columns>acfAnswer__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>ACF_Community__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACF_Community__c</field>
            <operation>equals</operation>
            <value>Lendi</value>
        </filters>
        <label>All - Lendi</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dependent Documents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>